creusot/tests/should_fail/prusti/partial_zombie/trait_bound.stderr
error: binary operation `==` cannot be applied to type `creusot_contracts::prusti::Zombie<MyOp<std::boxed::Box<u32>>>` since it doesn't implement `SnapEq`
  --> trait_bound.rs:21:11
   |
21 | #[ensures(x == x)]
   |           ^

error: aborting due to 1 previous error

